--- a/trabajo2/styles.css
+++ b/trabajo2/styles.css
@@ -101,7 +101,7 @@ body {
 .user--info{
     display: flex;
     align-items: center;
-    gap: 1;
+    gap: 1rem;
 }
 .searh--box{
     background:rgb(237,237,237);
@@ -126,4 +126,27 @@ body {
 }
 /* card container */
 
+.card--container {
+    background: #fff;
+    padding: 2rem;
+    border-radius: 10px;
+}
 
+.card--wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+.main--title{
+    color:rgba(113, 99, 186, 255);
+    padding-bottom: 10px;
+    font-size: 15px;
+}
+.payment--card{
+    background: rgb(299, 223, 223);
+    border-radius: 10px;
+    padding: 1.2rem;
+    width: 290px;
+    height: 150px;
+    display: flex;
+}
