--- a/trabajo2/styles.css
+++ b/trabajo2/styles.css
@@ -149,4 +149,71 @@ body {
     width: 290px;
     height: 150px;
     display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    transition: all 0.5s ease-in-out;
+}
+.payment--card:hover{
+    transform: translate(-5px);
+}
+.card--header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+.amount{
+    display: flex;
+    flex-direction: column;
+}
+.title{
+    font-size: 12px;
+    font-weight: 200;
+}
+.amount--value{
+    font-size: 24px;
+    font-family: "Courier New", Courier, monospace;
+    font-weight: 600;
+}
+.icon{
+    color: #fff;
+    padding: 1rem;
+    height: 60px;
+    width: 60px;
+    text-align: center;
+    border-radius: 50px;
+    font-size: 1.5rem;
+    background: red;
+}
+.card-details{
+    font-size: 18px;
+    color: #777777;
+    letter-spacing: 2px;
+    font-family: "Courier New", Courier, monospace;
+}
+
+/* color */
+.light-red {
+    background: rgb(251,233,233);
+}
+.light-purple {
+    background: rgb(254,226,254);
+}
+.light-green {
+    background: rgb(235,254,235);
+}
+.light-blue {
+    background: rgb(236,236,254);
+}
+.dark-red{
+    background: red;
+}
+.dark-purple{
+    background: purple;
+}
+.dark-green{
+    background: green;
+}
+.dark-blue{
+    background: blue;
 }
